    - fixed compilation with gcc 4.6.1
    - another "make dist" fix, for the LV2 plugin
    - made --enable-pthread-testcancel default on Mac OS X
    - minor Makefile fix for building lscpparser when build and source
      directories are separate
    - Mac OS X: made it possible to specify plugin installation dir to
      configure

  * general changes:
    - Refactoring: moved the independent code from
      the Gigasampler format engine to base classes
    - command line option '--profile' is currently disabled, since the
      respective profiling code is currently broken
    - Introduced support for optional environment variable
      "LINUXSAMPLER_PLUGIN_DIR" which allows to override the directory
      where the sampler shall look for instrument editor plugins
      (patch by Luis Garrido, slightly modified).
    - implemented Roland GS NRPN 1ArrH which allows to set volume per note
    - implemented Roland GS NRPN 1CrrH which allows to set pan per note
    - implemented Roland GS NRPN 1DrrH which allows to set reverb send per
      note (in this implementation of the sampler its simply hard routed to
      the 1st effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented Roland GS NRPN 1ErrH which allows to set chorus send per
      note (in this implementation of the sampler its simply hard routed to
      the 2nd effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented support for internal LADSPA effects
    - raised limit of program change queue from 100 to 512
      (as suggested by Alex Stone)

  * Gigasampler format engine:
    - implemented the "round robin keyboard" dimension
    - fixed round robin and random dimensions for cases when number of
      dimension zones is not a power of two
    - made round robin use a counter for each region instead of each
      key

  * SFZ format engine:
    - Initial implementation (not usable yet)